feat: (back) buy an upgrade
