# verseFactory_back/docs/openapi/openapi-admin-v1.yaml
@@ -173,6 +173,34 @@ paths:
           $ref: '#/components/responses/ForbiddenError'
         '404':
           $ref: '#/components/responses/NotFoundError'
+    post:
+      tags:
+        - Factory
+      summary: Buy an upgrade for the connected user's factory
+      operationId: buyConnectedUserFactoryUpgrade
+      security:
+        - OAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BuyUpgradeRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FactoryUpgradeDto'
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
   /factory/pets/{id}:
     delete:
       tags:
@@ -388,6 +416,17 @@ components:
         petId:
           type: string
           format: uuid
+
+    BuyUpgradeRequest:
+      type: object
+      required:
+        - upgradeId
+        - price
+      properties:
+        upgradeId:
+          type: string
+        price:
+          type: number
 
     BoxDto:
       type: object
