# verseFactory_back/src/main/java/fr/versefactory/template/v1/admin/factory/FactoryControllerV1.java
@@ -7,6 +7,7 @@ import fr.versefactory.template.v1.admin.openapi.payload.FactoryPetDto;
 import fr.versefactory.template.v1.admin.openapi.payload.FactoryUpgradeDto;
 import fr.versefactory.template.v1.admin.openapi.payload.PetDto;
 import fr.versefactory.template.v1.admin.openapi.payload.AddPetToFactoryRequest;
+import fr.versefactory.template.v1.admin.openapi.payload.BuyUpgradeRequest;
 import fr.versefactory.template.config.security.user.UserDetailsImpl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -71,5 +72,17 @@ public class FactoryControllerV1 extends AdminControllerV1 implements FactoryApi
                 .getPrincipal();
         service.deletePetFromFactory(userDetails.getKeycloakId(), id);
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<FactoryUpgradeDto> buyConnectedUserFactoryUpgrade(BuyUpgradeRequest buyUpgradeRequest) throws Exception {
+        UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getPrincipal();
+        FactoryUpgradeDto purchasedUpgrade = service.buyUpgrade(
+                userDetails.getKeycloakId(),
+                buyUpgradeRequest.getUpgradeId(),
+                buyUpgradeRequest.getPrice());
+        return ResponseEntity.ok(purchasedUpgrade);
     }
 }
